--- a/MEMBERS.html
+++ b/MEMBERS.html
@@ -14,7 +14,7 @@
 		<h3 align="center">Members:</h3>
 		<ol align="center">
 			<p>Iñigo Aguas</p>
-			<p>Shaleigh Tolentino</p>
+			<p>Shaeleigh Tolentino</p>
 			<p>Prince Soto</p>			
 			<p>Lianne Roque</p>
 			<p>Nickole Marimla</p>
