--- a/MEMBERS.html
+++ b/MEMBERS.html
@@ -13,6 +13,7 @@
 	<br /><br /><br /><br /><br /><br /><br /><br /><br />
 		<h3 align="center">Members:</h3>
 		<ol align="center">
+			<p>Iñigo Aguas</p>
 			<p>Shaeleigh Tolentino</p>
 			<p>Prince Soto</p>			
 			<p>Lianne Roque</p>
